<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MeetUp</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Log Out</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_login">Sign in</string>

    <string name="meetup_account">MeetUpAccount</string>
    <string name="invited_to">Invited to</string>
    <string name="hosted_by_me">Hosted by me</string>
    <string name="title_activity_add_event">AddEventActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="event_name">Event Name</string>
    <string name="hint_event_name">Eg Soma\'s treat</string>
    <string name="duration">Duration</string>
    <string name="hint_duration">2 hours?</string>
    <string name="title_activity_invited_to">InvitedToActivity</string>
    <string name="date">Date</string>
    <string name="from_time">From</string>
    <string name="to_time">To</string>

</resources>
