<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/list_item_leg">

    <EditText
        android:id="@+id/date"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/date" />
    <EditText
        android:id="@+id/etxt_time_from"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/from_time" />


    <EditText
        android:id="@+id/etxt_time_to"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight=".5"
        android:hint="@string/to_time" />

    <Button
        android:id="@+id/addmebtn"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:background="@android:drawable/ic_input_add"/>

</LinearLayout>