<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="20dp"
        android:orientation="vertical">

        <TableLayout
            android:id="@+id/table"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/event_name"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/frutaTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/hint_event_name"
                    android:imeOptions="flagNoExtractUi" />
            </TableRow>


            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/duration"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <EditText
                    android:id="@+id/telefonoTxt"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:hint="@string/hint_duration"
                    android:imeOptions="flagNoExtractUi"
                    android:inputType="phone" />
            </TableRow>


        </TableLayout>


        <LinearLayout
            android:id="@+id/lytBtns"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/table"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/table"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="ADD" />

            <Button
                android:id="@+id/rejectBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/table"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:text="REJECT" />
        </LinearLayout>


        <ListView
            android:id="@+id/list_free_slots"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_below="@id/lytBtns"></ListView>

        <Button
            android:id="@+id/sendBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/list_free_slots"
            android:layout_centerHorizontal="true"
            android:layout_gravity="center"
            android:layout_marginTop="30dp"
            android:text="SEND" />
    </RelativeLayout>
</ScrollView>